crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_images.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..254
  HEADING@0..9
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..8
      TEXT@2..8 "Images"
    NEWLINE@8..9 "\n"
  BLANK_LINE@9..10
    BLANK_LINE@9..10 "\n"
  PARAGRAPH@10..47
    TEXT@10..24 "Simple image: "
    IMAGE_LINK@24..46
      IMAGE_LINK_START@24..26
        IMAGE_LINK_START@24..26 "!["
      IMAGE_ALT@26..34
        TEXT@26..34 "alt text"
      IMAGE_ALT_END@34..35 "]"
      IMAGE_DEST_START@35..36 "("
      LINK_DEST@36..45
        TEXT@36..45 "image.png"
      IMAGE_DEST_END@45..46 ")"
    NEWLINE@46..47 "\n"
  BLANK_LINE@47..48
    BLANK_LINE@47..48 "\n"
  PARAGRAPH@48..91
    TEXT@48..60 "With title: "
    IMAGE_LINK@60..90
      IMAGE_LINK_START@60..62
        IMAGE_LINK_START@60..62 "!["
      IMAGE_ALT@62..70
        TEXT@62..70 "alt text"
      IMAGE_ALT_END@70..71 "]"
      IMAGE_DEST_START@71..72 "("
      LINK_DEST@72..89
        TEXT@72..89 "image.png \"Title\""
      IMAGE_DEST_END@89..90 ")"
    NEWLINE@90..91 "\n"
  BLANK_LINE@91..92
    BLANK_LINE@91..92 "\n"
  PARAGRAPH@92..118
    TEXT@92..103 "Empty alt: "
    IMAGE_LINK@103..117
      IMAGE_LINK_START@103..105
        IMAGE_LINK_START@103..105 "!["
      IMAGE_ALT@105..105
      IMAGE_ALT_END@105..106 "]"
      IMAGE_DEST_START@106..107 "("
      LINK_DEST@107..116
        TEXT@107..116 "image.png"
      IMAGE_DEST_END@116..117 ")"
    NEWLINE@117..118 "\n"
  BLANK_LINE@118..119
    BLANK_LINE@118..119 "\n"
  PARAGRAPH@119..164
    TEXT@119..132 "Complex alt: "
    IMAGE_LINK@132..163
      IMAGE_LINK_START@132..134
        IMAGE_LINK_START@132..134 "!["
      IMAGE_ALT@134..151
        STRONG@134..142
          STRONG_MARKER@134..136 "**"
          TEXT@136..140 "bold"
          STRONG_MARKER@140..142 "**"
        TEXT@142..151 " alt text"
      IMAGE_ALT_END@151..152 "]"
      IMAGE_DEST_START@152..153 "("
      LINK_DEST@153..162
        TEXT@153..162 "image.png"
      IMAGE_DEST_END@162..163 ")"
    NEWLINE@163..164 "\n"
  BLANK_LINE@164..165
    BLANK_LINE@164..165 "\n"
  PARAGRAPH@165..219
    TEXT@165..187 "Automatic link style: "
    AUTO_LINK@187..218
      AUTO_LINK_MARKER@187..188
        AUTO_LINK_MARKER@187..188 "<"
      TEXT@188..217 "https://example.com/i ..."
      AUTO_LINK_MARKER@217..218
        AUTO_LINK_MARKER@217..218 ">"
    NEWLINE@218..219 "\n"
  BLANK_LINE@219..220
    BLANK_LINE@219..220 "\n"
  PARAGRAPH@220..230
    TEXT@220..229 "Separate:"
    NEWLINE@229..230 "\n"
  BLANK_LINE@230..231
    BLANK_LINE@230..231 "\n"
  FIGURE@231..254
    IMAGE_LINK@231..253
      IMAGE_LINK_START@231..233
        IMAGE_LINK_START@231..233 "!["
      IMAGE_ALT@233..241
        TEXT@233..241 "alt text"
      IMAGE_ALT_END@241..242 "]"
      IMAGE_DEST_START@242..243 "("
      LINK_DEST@243..252
        TEXT@243..252 "image.png"
      IMAGE_DEST_END@252..253 ")"
    NEWLINE@253..254 "\n"
