crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_indented_code_after_atx_heading_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..18
  HEADING@0..10
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..9
      TEXT@2..9 "Heading"
    NEWLINE@9..10 "\n"
  CODE_BLOCK@10..18
    CODE_CONTENT@10..18
      WHITESPACE@10..14 "    "
      TEXT@14..17 "foo"
      NEWLINE@17..18 "\n"
