crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_indented_code_mixed_tab_space.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..16
  CODE_BLOCK@0..16
    CODE_CONTENT@0..16
      WHITESPACE@0..3 "  \t"
      TEXT@3..15 "foo\tbaz\t\tbim"
      NEWLINE@15..16 "\n"
